--- a/src/stylesheets/ViewSkeleton.scss
+++ b/src/stylesheets/ViewSkeleton.scss
@@ -28,6 +28,7 @@
     border-radius: 50%;
     background-color: $background-skeleton;
     margin-top: 10px;
+    margin-left: 20px;
     animation: skeleton 2s infinite;
 }
 
@@ -49,6 +50,7 @@
     border-radius: 50%;
     background-color: $background-skeleton;
     margin-top: 10px;
+    margin-left: 20px;
     animation: skeleton 2s infinite;
 }
 
